--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@ body {
     overflow: auto;
 }
 
+.coverall {
+    z-index: 1000;
+    background-color: #CCC;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    padding-top: 56px;
+}
+
 .anchor {
     display: block;
     height: 42px;
