--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@ body {
 }
 
 .logincontainer {
-    position: fixed;top: 0px;
-left: 0px;
+    position: fixed;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
     padding-top: 56px;
